# Personal-Podcast-Generator

./: .env.example  .gitignore  README.md  solution.md
backend/: app.py  db.py  pyproject.toml
backend/llm/: __init__.py  openai_client.py
backend/routes/: podcasts.py  sources.py
backend/scrapers/: __init__.py  hackernews.py
backend/scripts/: run_scraper.py  seed_db.py
backend/services/: __init__.py  podcast_generation.py  source_cleaning.py  validation.py
backend/tts/: __init__.py  elevenlabs_client.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: app.css
frontend/src/lib/components/: BriefingPlayer.svelte  Demographics.svelte  GenerationLoader.svelte  MonthlyUsersLineChart.svelte  PreferenceSelector.svelte  TimeHeatmap.svelte
frontend/src/routes/: +page.ts
frontend/src/routes/generate/: +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/kpis/: +page.svelte
