[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "elevenlabs>=2.49.0",
    "fastapi>=0.136.1",
    "motor>=3.7.1",
    "openai>=2.37.0",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
